tests/type-reconstruction/ill-typed/records/records-6.stella
language core;

extend with #records, #type-reconstruction;

fn main(x : auto) -> auto {
  return
    (
      fn (x : fn(auto) -> Bool) {
        return fn (y : auto) {
          return { x = x, y = if Nat::iszero(x(0)) then 0 else succ(x(0)) }.y
        }
      }
    )
    (fn (x : Nat) { return x})
    (if true then succ(0) else 0)
}
